--- a/static/base.css
+++ b/static/base.css
@@ -1,7 +1,7 @@
 @import url(login.css);
 :root {
     --primary-color: #231f20;
-    --secondary-color: rgba(172, 22, 64, 0.918);
+    --secondary-color: #ac1640ea;
     --gray_base-color: #e1e1e1;
     --form_card-color1: #fbfbfb;
     --text_box-color: #f9cbd0;
