--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -11,7 +11,8 @@
       <meta name="description" content="" />
     
       <!-- * Llamada al archivo CSS -->
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="{{ url_for('static', filename='inicio.css') }}">
+      <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     </head>
 
     <body>
