--- a/static/eventoestilo.css
+++ b/static/eventoestilo.css
@@ -64,100 +64,6 @@ nav .Barra_íconos{
     transform: translateY(-50%);
 }
 
-form{
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    align-items: center;
-}
-
-.Botón_regresar{
-    display: inline-block;
-    background-color: white;
-    padding: 15px;
-    text-decoration: none;
-    border-radius: 20px;
-    border-style: outset;
-    border-color: black;
-    position: absolute;
-    left:78%;
-    top: 77%;
-    color:#8b0000;
-}
-
-.Mostrar_Datos_Usuario {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #8b0000; 
-    padding: 75px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    color: white; 
-    border-radius: 20px;
-    font-size: 25px;
-    width: 45%;
-    border:outset;
-    border-color: black; 
-}
-.Cambiar_contraseña{
-    background-color: #8b0000;
-    width: 30%;
-    color:white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    padding: 40px;
-    margin: 20px;
-    border-radius: 20px;
-    position: absolute;
-    right:34%;
-    top: 13%;
-    display: none;
-    z-index: 1000;
-    border:outset;
-    border-color: black; 
-}
-
-#Cerrar{
-    position: absolute;
-    right: 5%;
-    top: 3%
-}
-
-.Botón_Cambiar{
-    display: inline-block;
-    background-color: white;
-    padding: 15px;
-    text-decoration: none;
-    border-radius: 20px;
-    border-style: outset;
-    border-color: black;
-    position: absolute;
-    left:70%;
-    top: 55%;
-    color:#8b0000;
-}
-
-.Botón_Guardar{
-    display: inline-block;
-    background-color: white;
-    padding: 15px;
-    text-decoration: none;
-    border-radius: 20px;
-    border-style: outset;
-    border-color: black;
-    position: absolute;
-    left:70%;
-    top: 25%;
-    color:#8b0000;
-}
-
-.Utilidades{
-    font-size: 20px;
-    font-family: 20px;
-}
-
 .Evento{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -175,15 +81,12 @@ form{
     font-size: 25px;
     width: 80%;
     gap: 20px;
-    border:outset;
-    border-color: black; 
 }
-
 .Ubicacion_Evento{
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: #8b0000;
-    width: 60%;
+    width: 30%;
     color:white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
@@ -191,12 +94,40 @@ form{
     margin: 20px;
     border-radius: 20px;
     position: absolute;
-    left: 20%;
+    right:34%;
     top: 13%;
     display: none;
     z-index: 1000;
-    gap: 20px;      
-    height: 40%;
-    border:outset;
-    border-color: black;             
+    gap: 20px                   
+}
+
+#Cerrar{
+    position: absolute;
+    right: 5%;
+    top: 3%
+}
+
+form{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    align-items: center;
+}
+
+.Botón_regresar{
+    display: inline-block;
+    background-color: white;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 20px;
+    border-style: outset;
+    border-color: black;
+    position: absolute;
+    left:89%;
+    top: 88%;
+    color:#8b0000;
+}
+
+.Utilidades{
+    font-size: 20px;
+    font-family: 20px;
 }
