--- a/static/base.css
+++ b/static/base.css
@@ -1,5 +1,6 @@
 @import url(login.css);
 @import url(datosuestilo.css);
+@import url(comite.css);
 :root {
     --primary-color: #231f20;
     --secondary-color: #ac1640ea;
