Implementar jinja a la vista de login, modificar cosas de la vista comite tanto como html y css

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
         <li><a href="#">Datos Personales</a></li>
         <li><a href="#" onclick="mostrarDatosUsuario()">Datos del Usuario</a></li>
         <li><a href="#" onclick="mostrarEvento()">Evento</a></li>
+        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
         <li><a herf="#">Cerrar Sesión</a></li>
         <li><a href="#">Contacto</a></li>
     </ul>
