--- a/templates/login.old.html
+++ b/templates/login.old.html
@@ -33,9 +33,9 @@
             <div>
                 <i class="access"></i>
                 <form>
-
+                    
                     <i class="fas fa-user"></i>
-                    <!--fas indica que se usando la categoría "Solid" de Font Awesome y fa-user es el nombre de nuestro icono que stamos utilizando-->
+                    <!--fas indica que se usando la categoría "Solid" de Font Awesome y fa-user es el nombre de nuestro icono que estamos utilizando-->
                     <label><input type="text" name="Nombre" placeholder="Nombre"></label>
                     <!--placeholder se refiere a texto adicional-->
 
