--- a/static/comite.css
+++ b/static/comite.css
@@ -1,9 +1,8 @@
-
-  .content { 
+.content {
 	min-height: 80px;
 	background: var(--primary-color);
   }
-  .menu {
+.menu {
   position: absolute;
   top: 10px;
   left: 0;
@@ -56,6 +55,7 @@
   /*termina header*/
 
 .contenedor_vista{
+    margin-top: 75px;
     position: relative;
     left: 500px;
     top: 60px;
@@ -81,7 +81,7 @@ input[type=text] {
   width: 42%;
   height: 10px;
   max-width: 300px;
-  background: #e1e1e1;
+  background-color:#e1e1e1;  
   padding: 15px;
   border-radius:25px;
   position: relative; left: 10px; top: 20px; /*posicion static*/
@@ -94,10 +94,17 @@ input[type=file]{
   background: #e1e1e1;
   padding: 15px;
   border-radius:25px;  
-  position: absolute; left: 270px; top: 65px;/* posicion que no reserva ningun espacio*/
+  position: absolute; left: 270px; top: 111px;/* posicion que no reserva ningun espacio*/
 }
 
-input.direccion[type=text]{
+input[type=teex]{
+  width: 40%;
+  height: 10px;
+  max-width: 300px;
+  background: #e1e1e1;
+  padding: 15px;
+  border-radius:25px;  
+  position: absolute; left: 22px; top: 180px;
 }
 
 input[type=tex]{
@@ -107,7 +114,7 @@ input[type=tex]{
   background: #e1e1e1;
   padding: 15px;
   border-radius:25px;  
-  position: absolute; left: 270px; top: 116px;
+  position: absolute; left: 270px; top: 165px;
   margin-top: 15px;
 }
 
@@ -118,7 +125,7 @@ input[type=te]{
   background: #e1e1e1;
   padding: 15px;
   border-radius:25px;  
-  position: absolute; left: 22px; top: 256px;
+  position: absolute; left: 22px; top: 305px;
   margin-top: 15px;
 }
 
@@ -129,7 +136,7 @@ input[type=date]{
   background: #e1e1e1;
   padding: 15px;
   border-radius:25px;  
-  position: absolute; left: 22px; top: 186px;
+  position: absolute; left: 22px; top: 235px;
   margin-top: 15px;
 }
 
@@ -141,7 +148,7 @@ input[type=time]{
   padding: 15px;
   border-radius:25px;  
   margin-top: 15px;
-  position: absolute; left: 270px; top: 186px;
+  position: absolute; left: 270px; top: 235px;
 }
 
 input[type=number]{
@@ -152,7 +159,7 @@ input[type=number]{
   padding: 15px;
   border-radius:25px;  
   margin-top: 15px;
-  position: absolute; left: 270px; top: 256px;
+  position: absolute; left: 270px; top: 305px;
 }
 
 input[type=button]{
