--- a/static/login.css
+++ b/static/login.css
@@ -1,9 +1,3 @@
-#im{
-    height: 110vh !important;
-    background: url(im.jpg)no-repeat center; 
-    background-size: cover;
-  }
-  
 .Bv{   /*bienvenido... inicio militantes... Crear cuenta*/
       text-align: left; /*la alineacion del texto*/
       font-family: Arial, sans-serif;
@@ -44,18 +38,15 @@
       align-items: center;
     }
   
-input[type=text] {  /*input sobre el nombre y contraseña del usuario*/
+input[type=text] {
+  /*input sobre el nombre y contraseña del usuario*/
     margin-top: 10px; /*es el margen que tiene un boton de otro*/
     padding: 5px;
     width: 60%;
     font-size: 11px; /*es el acercamiento de la letra */
     font-weight: 6px; /*el grosor de la letra*/
     background-color: rgba(172, 22, 64, 0.918);
-    
-    background-image: url('');/*intento de poner el icono dentro del boton */
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding-left: 40px;
+  
   }
 input::placeholder {  /*input del texto provicional(placeholder)*/
     color: white;
@@ -77,3 +68,17 @@ input::placeholder {  /*input del texto provicional(placeholder)*/
 .fas.fa-check-circle{
     color:rgba(172, 22, 64, 0.918);
   }
+.fas.fa-user {
+  color: rgba(172, 22, 64, 0.918);
+  position: absolute;
+  left: 80px;
+  top: 104px;
+}
+
+.fas.fa-lock {
+  color: rgba(172, 22, 64, 0.918);
+  position: absolute;
+  left: 80px;
+  top: 146px;
+
+}
