--- a/templates/comite.html
+++ b/templates/comite.html
@@ -1,26 +1,9 @@
 {% extends "base_template.html" %}
 {% block title %}COMITE{% endblock %}
 {% block header %}
-<div class="content">
-    <div class="menu container">
-             <input type="checkbox" id="menu"/>
-             <div class="parra">
-             <p>Nombre del militante</p>
-            </div>
-                    <label for="menu">
-                             </label>
-                                <nav class="navbar"><!-- nav permiten a los usuarios desplazarse o acceder a diferentes partes-->
-                                     <ul>
-                                      
-                <li><a href="index.html">Datos personales</a></li>
-                <li><a href="DatosUsuario.html">Datos del usuario</a></li>
-                <li><a href="comite.html" target="_blank">Comite</a></li>
-                <li><a href="CerrarSesion.html">Cerrar sesion</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
-                                    </ul>
-                              </nav>
-     </div>
-</div>
+<header>
+    {% include "header.html" %}
+</header>
 {% endblock %}
 
 {% block content %}
@@ -30,7 +13,7 @@
             <h2>Comité</h2>
         </div>
         <section com="comite" class="contenedor_comite">
-            <div><input type="text" name="Nombre" placeholder="Comité"> </div>
+        <div><input type="text" name="Nombre" placeholder="Comité"></div>
         </section>
         <br>
         <br>
@@ -39,19 +22,16 @@
         </section>
 
         <section di="Direccion" class="direccion"><!--input 2 izquierdo-->
-            <div><input type="text" name="Direccion" placeholder="Dirección principal"> </div>
+            <div><input type="teex" name="Direccion" placeholder="Dirección principal"> </div>
         </section>
         <br>
         <br>
         <section dic="Alterna" class="Alterna"><!--input que debe ser 2 derecho-->
-            <div><input type="tex" name="Alterna" placeholder="Dirección alterna" /> </div>
+        <div><input type="tex" name="Alterna" placeholder="Dirección alterna" /> </div>
         </section>
 
 
-        <section reunion="Dia" class="reunion">
-            <label>Dia de la reunion</label>
-            <div><input type="date" name="Di" placeholder="Día de la reunión"></div>
-        </section>
+    <div><input type="date" name="Di" placeholder="Día de la reunión"></div>
 
         <section hora="ho" class="reu">
             <div><input type="time" name="time" id="time" value="Hora de reunión" /></div>
@@ -76,7 +56,16 @@
 
         <section sig="siguiente" class="next">
             <div><i class="fas fa-chevron-right"></i><input type="butt" value="Siguiente" /></div>
+        </section>
+        <script>
+            function mostrarComite() {
+                document.getElementById("Formulario").style.display = "block";
+            }
+            function cerrarComite() {
+                document.getElementById("Formulario").style.display = "none";
+            }
 
+</script>
     </div>
 </main>
 {% endblock %}
