--- a/templates/comite.old.html
+++ b/templates/comite.old.html
@@ -27,12 +27,11 @@
                 </div>
                 <label for="menu">
                 </label>
-                <nav class="navbar"><!-- nav permiten a los usuarios desplazarse o acceder a diferentes partes-->
+                <nav><!-- representa una sección de una página cuyo propósito es proporcionar enlaces de navegación-->
                     <ul>
-
                         <li><a href="index.html">Datos personales</a></li>
                         <li><a href="DatosUsuario.html">Datos del usuario</a></li>
-                        <li><a href="comite.html" target="_blank">Comite</a></li>
+                        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
                         <li><a href="CerrarSesion.html">Cerrar sesion</a></li>
                         <li><a href="Contacto.html">Contacto</a></li>
                     </ul>
@@ -42,7 +41,6 @@
     </header><br>
     <br>
     <main>
-        <div class="contenedor_vista">
             <div class="word">
                 <h2>Comité</h2>
             </div>
@@ -91,8 +89,16 @@
 
             <section sig="siguiente" class="next">
                 <div><i class="fas fa-chevron-right"></i><input type="butt" value="Siguiente" /></div>
-
         </div>
+
+        <script>
+            function mostrarComite() {
+                document.getElementById("Formulario").style.display = "block";
+            }
+            function cerrarComite() {
+                document.getElementById("Formulario").style.display = "none";
+            }
+        </script>
     </main>
 </body>
 
