Termine la vista de la pagina principal y el archivo CSS, me falta perfeccionar el header

--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,7 @@
 @import url(login.css);
 @import url(datosuestilo.css);
 @import url(comite.css);
+@import url(inicio.css);
 :root {
     --primary-color: #231f20;
     --secondary-color: #ac1640ea;
