--- a/templates/inicio.old.html
+++ b/templates/inicio.old.html
@@ -20,19 +20,19 @@
       <header>
         <nav class="navbar">
           <strong>
-            <a href="">CONTACTO</a>
-            <a href="">MILITANTES</a>
-            <a href="">COMITÉ</a>
-            <a href="">INICIO</a>
+            <a href="">Contacto</a>
+            <a href="">Militantes</a>
+            <a href="">Comité</a>
+            <a href="">Inicio</a>
           </strong>
         </nav>
-    </header>
-    
-    <main>
+      </header>
+      
+      <main>
+        <h1 class="titulo">Militancia</h1>
         <section class="seccionGral">
-            <!-- * Bloque para iniciar sesion-->
-            <section class="login">
-              <h1 class="titulo">Militancia</h1>
+          <!-- * Bloque para iniciar sesion-->
+          <section class="login">
             <button>Iniciar sesión</button>
             </p>
             <button class="secButton">Registrarse</button>
