--- a/static/inicio.css
+++ b/static/inicio.css
@@ -4,8 +4,9 @@ body {
 }
 
 h1 {
-    color: #000000;
+    color: #5a5a5a;
     font-size: 60px;
+    
     
 }
 
@@ -13,6 +14,7 @@ h1 {
 
 button {
     color: #ffffff;
+    background-color: #8B0000;
     background-color: --primary-color;
     padding: 10px 20px;
     border: none;
@@ -42,19 +44,21 @@ button:active {
 }
 
 .navbar {
+    display: grid;    
     overflow: hidden;
     background-color:#8B0000;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 6px;
+    
 }
 
 .navbar a {
     text-decoration: none;
     float: right;
-    display: block;
+    display: grid;
     color: #ffff;
     text-align: center;
-    padding: 30px 80px;
+    padding: 25px 40px;
     font-size: 20px;
 }
 
@@ -62,29 +66,36 @@ button:active {
     color: #8b8b8b;
 }
 
-.login {
-    float: left;
-    width: 20%;
-    margin: 0 auto;
-    padding: 150px 30px;
-    background-color: #d4d4d4;
-    border-radius: 6px;
+.titulo {
+    font-size: 50px;
+    
 }
 
-.secciones {
-    right: 20px;
-    padding: 10px;
-    width: 20%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #d4d4d4;
+.seccionGral {
+    padding: 16px;
+    padding-top: 135px;
+    display: grid;
+    grid-template-columns: 1.5fr repeat(2, 2fr);
+    grid-template-rows: 375px;
+    grid-auto-flow: dense;
+    gap: 16px;
+}
+
+.seccionGral section {
+    background-color: #ffffff;
     border-radius: 6px;
+    padding: 16px;
+    padding-top: 1px;
+}
+
+.seccionGral section:first-child {
+    grid-row-start: span 2;
+}
+
+.seccionGral section:last-child {
+    grid-column-start: span 2;
 }
 
 .secciones h2 {
-    text-align: center;
-    margin: 0 auto;
-    color: #8B0000;
-    width: 80%;
-    padding: 10px;
+    font-size: 25px
 }
