revision de comite para cerrar ventana

--- a/templates/comite.old.html
+++ b/templates/comite.old.html
@@ -93,10 +93,10 @@
 
         <script>
             function mostrarComite() {
-                document.getElementById("Formulario").style.display = "block";
+                document.getElementById("Cont").style.display = "block";
             }
             function cerrarComite() {
-                document.getElementById("Formulario").style.display = "none";
+                document.getElementById("Cont").style.display = "none";
             }
         </script>
     </main>
