--- a/static/datosuestilo.css
+++ b/static/datosuestilo.css
@@ -1,9 +1,3 @@
-form{
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    align-items: center;
-}
-
 .Botón_regresar{
     display: inline-block;
     background-color: white;
@@ -15,32 +9,47 @@ form{
     position: absolute;
     left:78%;
     top: 77%;
-    color:#8b0000;
+    color: var(--secondary-color);
 }
 
-.Mostrar_Datos_Usuario {
+.mostrar_datos_usuario {
     display: none;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #8b0000; 
+    background-color: var(--secondary-color); 
     padding: 75px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     color: white; 
     border-radius: 20px;
     font-size: 25px;
-    width: 45%;
+    width: 50%;
     border:outset;
     border-color: black; 
 }
-.Cambiar_contraseña{
-    background-color: #8b0000;
-    width: 30%;
-    color:white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+
+.fecha_registro{
+    position: relative;
+}
+
+.fecha_registro input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--primary-color);
+    background: transparent;
+    color: var(--white);
+    outline: none;
+}
+
+.cambiar_contraseña{
+    background-color: var(--secondary-color);
+    width: 40%;
+    color:var(--white);
     padding: 40px;
     margin: 20px;
     border-radius: 20px;
@@ -50,10 +59,102 @@ form{
     display: none;
     z-index: 1000;
     border:outset;
-    border-color: black; 
+    border-color: var(--primary-color); 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    height: 50%;
 }
 
-#Cerrar{
+.antigüa_contraseña{
+    position: relative;
+}
+
+.antigüa_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.antigüa_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+input:focus ~ label{
+    top: 0;
+    left: 15px;
+    font-size: 16px;
+    padding: 0 2px;
+    background: var(--secondary-color);
+}
+
+.nueva_contraseña{
+    position: relative;
+}
+
+.nueva_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.nueva_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+.confirmar_contraseña{
+    position: relative;
+}
+
+.confirmar_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.confirmar_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+#cerrar{
     position: absolute;
     right: 5%;
     top: 3%
@@ -70,7 +171,7 @@ form{
     position: absolute;
     left:70%;
     top: 55%;
-    color:#8b0000;
+    color: var(--secondary-color);
 }
 
 .Botón_Guardar{
@@ -84,7 +185,7 @@ form{
     position: absolute;
     left:70%;
     top: 25%;
-    color:#8b0000;
+    color: var(--secondary-color);
 }
 
 .Utilidades{
@@ -100,7 +201,7 @@ form{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #8b0000; 
+    background-color: var(--secondary-color); 
     padding: 75px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -116,7 +217,7 @@ form{
 .Ubicacion_Evento{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: #8b0000;
+    background-color: var(--secondary-color);
     width: 60%;
     color:white;
     font-family: Arial, Helvetica, sans-serif;
@@ -133,4 +234,54 @@ form{
     height: 40%;
     border:outset;
     border-color: black;             
+}
+
+.contenedor{
+    width: 300px;
+    cursor: pointer;
+    position: relative;
+}
+
+.menu_desplegable{
+    background-color: var(--secondary-color);
+    padding: 20px;
+    color: var(--white);
+    font-weight: 500;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.porcentajes{
+    position: absolute;
+    width: 100%;
+    background-color: var(--white);
+    border-radius: 6px;
+    margin-top: 14px;
+    padding: 0 20px;
+    max-height: 180px;
+    overflow-y: auto;
+    transition: .4s linear .2s;
+    height: 0;
+}
+
+.opcion{
+    padding: 8px 0;
+    font-weight: 500;
+    font-size: 14px;
+    transition: 3.s ease-in-out;
+}
+
+.opcion:hover{
+    color: var(--primary-color);
+}
+
+.porcentajes::-webkit-scrollbar{
+    width: 4px;
+    background-color: var(--secondary-color);
+}
+
+.porcentajes::-webkit-scrollbar-thumb{
+    background-color: var(--secondary-color);
 }
