--- a/static/header.css
+++ b/static/header.css
@@ -1,4 +1,4 @@
-nav{
+nav {
     position: absolute;
     z-index: 10;
     left: 0;
@@ -10,7 +10,7 @@ nav{
     background-color: var(--secondary-color);
 }
 
-nav .Logotipo{
+nav .Logotipo {
     float: left;
     width: 40%;
     height: 100%;
@@ -22,7 +22,7 @@ nav .Logotipo{
     text-transform: uppercase;
 }
 
-nav .Lista{
+nav .menu_horizontal {
     float: right;
     padding: 0;
     margin: 0;
@@ -33,33 +33,85 @@ nav .Lista{
     align-items: center;
 }
 
-nav .Lista li{
+nav .menu_horizontal li {
     list-style: none;
+    position: relative;
 }
 
-nav .Lista a{
-    display: block;
+nav .menu_horizontal a {
+    display: flex;
     text-transform: uppercase;
     padding: 15px;
     font-size: 16px;
     font-weight: bold;
-    color:var(--white);
+    color: var(--white);
     text-decoration: none;
-
-}
-nav .Lista a:hover{
-    border-bottom: 4px solid var(--white);
+    transition: all 300ms ease;
 }
 
-#Mostrar{
+nav .menu_horizontal a:hover {
+    transform: scale(1.1);
+    background-color: var(--primary-color);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+#Mostrar {
     position: absolute;
     top: -100%;
 }
 
-nav .Barra_íconos{
+nav .Barra_íconos {
     display: none;
     position: absolute;
     right: 5%;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.menu_vertical {
+    position: absolute;
+    top: 90px;
+    left: -5px;
+    padding: 14px 0px;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    background-color: var(--secondary-color);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    opacity: 0;
+    z-index: 10;
+    transition: all 300ms ease;
+}
+
+.menu_horizontal li:hover .menu_vertical {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+    top: 70px;
+}
+
+.menu_vertical li:hover {
+    background-color: var(--primary-color);
+    transform: scale(1.1);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.menu_vertical li a {
+    display: block;
+    color: var(--white);
+    padding: 15px 15px 15px 20px;
+    transition: all 300ms ease;
+}
+
+nav .menu_horizontal li .menu_vertical:before{
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 12px solid var(--secondary-color);
+    position: absolute;
+    top: -12px;
+    left: 20px;
 }
