archivos de bootstrap

--- a/templates/comite.html
+++ b/templates/comite.html
@@ -9,12 +9,11 @@
 <main>
         <div class="contenedor_vista" id="Cont">
                 <div id="cerrarcomite"><a href="javascript:void(0)" onclick="cerrarComite()">
-                    <i class="fa-solid fa-xmark"></i></a>
-                    </div>
+                    <i class="fa-regular fa-circle-xmark"></i></div>
             <div class="word">
                 <h2>Comité</h2>
             </div>
-
+            <section co="but" class="comite">
             <div><input type="text" name="Nombre" placeholder="Comité"></div>
     </section>
     <br>
