--- a/static/comite.css
+++ b/static/comite.css
@@ -15,7 +15,7 @@
     align-items: center; 
   }
 
-.fa-solid.fa-xmark{
+.fa-regular.fa-circle-xmark{
   color: #e1e1e1;
   position: absolute; left:455px; top:23px;
 }
@@ -25,7 +25,7 @@
   color: #e1e1e1;
 }
 
-input[type=text] {  
+.comite input {  
   background-color: var(--primary-color);
   width: 42%;
   height: 10px;
@@ -36,7 +36,7 @@ input[type=text] {
   position: relative; left: 10px; top: 20px; /*posicion static*/
 }
 
-input[type=file]{
+.contenedor_Ip input{
   width: 40%;
   height: 10px;
   max-width: 300px;
