Adición de los archivos visualizardatosu y grid2 (html)

--- a/static/header.css
+++ b/static/header.css
@@ -44,7 +44,7 @@ nav .menu_horizontal a {
     padding: 15px;
     font-size: 16px;
     font-weight: bold;
-    color: var(--white);
+    color: var(--white)!important;
     text-decoration: none;
     transition: all 300ms ease;
 }
