--- a/templates/header.html
+++ b/templates/header.html
@@ -5,18 +5,17 @@
         <i class="fa-solid fa-user"></i>Nombre del Militante
     </div>
     <ul class="menu_horizontal">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
         <li>
-            <a herf="#">Militantes</a>
+            <a herf="#">Datos del Usuario</a>
             <ul class="menu_vertical">
-                <li><a href="#">Datos personales</a></li>
-                <li><a href="#" onclick="mostrarDatosUsuario()">Datos del Usuario</a></li>
-                <li><a href="#" onclick="mostrarEvento()">Evento</a></li>
-                <li><a href="#">Cerrar sesión</a></li>
+                <li><a href="#" onclick="mostrarVisualizar()">Visualizar</a></li>
+                <li><a href="#" onclick="mostrarEditar()">Editar</a></li>
             </ul>
         </li>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
+        <li><a href="#" onclick="mostrarEvento()">Evento</a></li>
+        <li><a href="#">Admin</a></li>
+        <li><a href="#">Cerrar sesión</a></li>
     </ul>
     <label for="Mostrar" class="Barra_íconos">
         <div class="Línea"></div>
