--- a/static/datosuestilo.css
+++ b/static/datosuestilo.css
@@ -12,7 +12,7 @@
     color: var(--secondary-color);
 }
 
-.mostrar_datos_usuario {
+.visualizar_datos_usuario {
     display: none;
     position: fixed;
     top: 50%;
@@ -44,6 +44,9 @@
     background: transparent;
     color: var(--white);
     outline: none;
+    position: relative;
+    left: 10px;
+    top: 20px;
 }
 
 .cambiar_contraseña{
@@ -284,4 +287,8 @@ input:focus ~ label{
 
 .porcentajes::-webkit-scrollbar-thumb{
     background-color: var(--secondary-color);
+}
+
+.fa-solid.fa-xmark{
+    color: var(--grey_base-color);
 }
