flujo de front en 3  vistas

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
                 <li><a href="#" onclick="mostrarEditar()">Editar</a></li>
             </ul>
         </li>
-        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
+        <li><a href="{{ url_for('comite') }}">Comite</a></li>
         <li><a href="#" onclick="mostrarEvento()">Evento</a></li>
         <li><a href="#">Admin</a></li>
         <li><a href="#">Cerrar sesión</a></li>
