--- a/static/CambiarContraseñaestilo.css
+++ b/static/CambiarContraseñaestilo.css
@@ -1,25 +1,145 @@
-.Cambiar_contraseña{
-    background-color: #8b0000;
+.cambiar_contraseña{
+    background-color: var(--secondary-color);
     width: 40%;
-    color:white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    color:var(--white);
     padding: 40px;
     margin: 20px;
     border-radius: 20px;
     position: absolute;
     right:34%;
     top: 13%;
-    display: none;
+    display: block;
+    z-index: 1000;
+    border:outset;
+    border-color: var(--primary-color); 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    height: 50%;
 }
 
-#Cerrar{
+.antigüa_contraseña{
+    position: relative;
+}
+
+.antigüa_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.antigüa_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+input:focus ~ label{
+    top: 0;
+    left: 15px;
+    font-size: 16px;
+    padding: 0 2px;
+    background: var(--secondary-color);
+}
+
+.nueva_contraseña{
+    position: relative;
+}
+
+.nueva_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.nueva_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+.confirmar_contraseña{
+    position: relative;
+}
+
+.confirmar_contraseña input{
+    width: 350px;
+    height: 60px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 0px 15px;
+    border: 2px solid var(--white);
+    background: var(--secondary-color);
+    color: var(--white);
+    outline: none;
+}
+
+.confirmar_contraseña label{
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    color: var(---white);
+    font-size: 19px;
+    pointer-events: none;
+    transition: .3s;
+}
+
+.Botón_Cambiar{
+    display: inline-block;
+    background-color: white;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 20px;
+    border-style: outset;
+    border-color: black;
+    position: absolute;
+    left:70%;
+    top: 55%;
+    color: var(--secondary-color);
+}
+
+.Botón_Guardar{
+    display: inline-block;
+    background-color: white;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 20px;
+    border-style: outset;
+    border-color: black;
+    position: absolute;
+    left:70%;
+    top: 25%;
+    color: var(--secondary-color);
+}
+
+#cerrar{
     position: absolute;
     right: 5%;
     top: 3%
 }
 
-.Ventana_contraseña{
-    position: absolute;
-    bottom: 40%;
+.fa-solid.fa-xmark{
+    color: var(--grey_base-color);
 }
