--- a/static/base.css
+++ b/static/base.css
@@ -1,10 +1,11 @@
 @import url(login.css);
-@import url(datosuestilo.css);
+@import url(visualizardatosuestilo.css);
 @import url(comite.css);
 @import url(CambiarContraseñaestilo.css);
 @import url(eventoestilo.css);
 @import url(header.css);
 @import url(inicio.css);
+@import url(editardatosestilo.css);
 
 :root {
     --primary-color: #231f20;
@@ -16,7 +17,7 @@
 }
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     padding: 0;
     margin: 0;
     
