--- a/templates/header.html
+++ b/templates/header.html
@@ -2,20 +2,21 @@
 <nav>
     <input type="checkbox" id="Mostrar">
     <div class="Logotipo">
-        <i class="fa-solid fa-user"></i>Nombre del Militante
+        Nombre del Militante
     </div>
     <ul class="menu_horizontal">
         <li>
             <a herf="#">Datos del Usuario</a>
             <ul class="menu_vertical">
-                <li><a href="#" onclick="mostrarVisualizar()">Visualizar</a></li>
-                <li><a href="#" onclick="mostrarEditar()">Editar</a></li>
+                <li><a href="{{url_for('mostrarDatosU')}}" onclick="mostrarDatosU()">Visualizar datos</a></li>
+                <li><a href="{{url_for('CambiarContraseña')}}" onclick="mostrarContraseña()">Cambiar Contraseña</a></li>
+                <li><a href="{{url_for('editarDatos')}}" onclick="mostrarEdicion()">Editar datos</a></li>
             </ul>
         </li>
-        <li><a href="#" onclick="mostrarComite()">Comite</a></li>
-        <li><a href="#" onclick="mostrarEvento()">Evento</a></li>
-        <li><a href="#">Admin</a></li>
-        <li><a href="#">Cerrar sesión</a></li>
+        <li><a href="{{url_for('comite')}}" onclick="mostrarComite()">Comite</a></li>
+        <li><a href="{{url_for('evento')}}" onclick="mostrarEvento()">Evento</a></li>
+        <li><a href="{{url_for('mostrarAdmin')}}" onclick="mostrarAdmin()">Admin</a></li>
+        <li><a href="{{url_for('cerrarSesion')}}" ondblclick="mostrarLogOut()">Cerrar sesión</a></li>
     </ul>
     <label for="Mostrar" class="Barra_íconos">
         <div class="Línea"></div>
