--- a/templates/visualizardatosu.html
+++ b/templates/visualizardatosu.html
@@ -1,20 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Dagan Vega</h5>
-          <h6 class="card-subtitle mb-2 text-muted">daganjv.pro@gmail.com</h6>
-          <h6 class="card-subtitle mb-2 text-muted">Rol: Gestor DBA</h6>
-          <h6 class="card-subtitle mb-2 text-muted">Tell: 5630235019</h6>
+{% extends "base_template.html" %}
+{% block header %}
+<header>
+    {% include "header.html" %}
+</header>
+{% endblock %}
+{% block content %}
+<main>
+    <section class="visualizar_datos_usuario" id="Datos">
+        <div id="cerrar"><a href="javascript:void(0)" onclick="cerrarVisualizar()"><i class="fa-solid fa-xmark"></i></a>
         </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+        <div class="fecha_registro">
+            <input type="date" required>
+            <label>Ingrese su fecha de registro</label>
+        </div>
+        <div class="comite_asignado">
+            <input type="text" required>
+            <label>Comité asignado</label>
+        </div>
+        <div class="coordinador_comite">
+            <input type="text" required>
+            <label>Comité que coordina</label>
+        </div>
+    <!--<a href="{{ url_for('mostrarDatosU') }}" onclick="mostrarContraseña()"><span style="color: white;">Cambiar
+                contraseña</span></a>-->
+        <a href="{{ url_for('inicio') }}" class="Botón_regresar">Regresar</a>
+    </section>
+    </script>
+    <script>
+        function mostrarDatosU() {
+            document.getElementById("Datos").style.display = "block";
+        }
+        function cerrarVisualizar() {
+            document.getElementById("Datos").style.display = "none";
+        }
+    </script>
+</main>
+{% endblock %}
