vista de grird Jorge y yo

--- a/static/base.css
+++ b/static/base.css
@@ -6,6 +6,7 @@
 @import url(header.css);
 @import url(inicio.css);
 @import url(editardatosestilo.css);
+@import url(grid2.css);
 
 :root {
     --primary-color: #231f20;
