--- a/templates/grid2.html
+++ b/templates/grid2.html
@@ -1,11 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de datos</title>
-</head>
-<body>
-    
+{% extends "base_template.html" %}
+{% block title %} Grid {% endblock %}
+{% block header %}
+<header>
+    {% include "header.html" %}
+</header>
+{% endblock %}
+{% block content %}
+
+    <main>
+        <div class="container_grid">
+
+            <div class="row" style="background-color:beige;"><!--fila-->
+                <div class="col-sm">ID</div>
+                <div class="col-sm">Nombre</div>
+                <div class="col-sm">Apellido</div>
+                <div class="col-sm">Correo</div>
+                <div class="col-sm">Rol</div>
+                <div class="col-sm">Telefono</div>
+                <div class="col-sm">Operaciones</div>
+            </div>
+            <div class="row" style="background-color:beige;">
+                <div class="col-sm">1</div>
+                <div class="col-sm">Nombre</div>
+                <div class="col-sm">Apellido</div>
+                <div class="col-sm">Correo</div>
+                <div class="col-sm">Rol</div>
+                <div class="col-sm">Telefono</div>
+                <div class="col-sm">Operaciones</div>
+            </div>
+            <div class="row" style="background-color:beige;">
+                <div class="col-sm">2</div>
+                <div class="col-sm"></div>
+                <div class="col-sm"></div>
+                <div class="col-sm"></div>
+                <div class="col-sm"></div>
+                <div class="col-sm"></div>
+                <div class="col-sm"></div>
+                <div class="col-sm"><a href=""><i class="fa-solid fa-pen-to-square"></i></a> <a href=""><i
+                            class="fa-solid fa-delete-left"></i></a></div>
+
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    </main>
 </body>
-</html>
+{% endblock %}
